tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType7.errors.txt
tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType7_moduleC.ts(2,5): error TS2303: Circular definition of import alias 'selfVar'.


==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType7_moduleA.ts (0 errors) ====
    import moduleC = require("recursiveExportAssignmentAndFindAliasedType7_moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType7_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType7_moduleC.ts (1 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType7_moduleD");
    var selfVar = self;
        ~~~~~~~
!!! error TS2303: Circular definition of import alias 'selfVar'.
    export = selfVar;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType7_moduleD.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType7_moduleE");
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType7_moduleE.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType7_moduleC");
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType7_moduleB.ts (0 errors) ====
    class ClassB { }
    export = ClassB;
    